# strings

./: README.md  strings.h
tests/: CMakeLists.txt  main.cpp  tests.h
